fix text spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,6 +402,18 @@ input::-webkit-input-placeholder {
 .single-about-box h4 {
 	margin: 25px 0 15px;
 }
+
+.about-box h4 {
+	font-size: 20px;
+}
+.about-box ul {
+    margin: 10px 20px 25px;
+}
+.about-box li {
+    /* text-indent: 20px; */
+    text-align-last: left; 
+    list-style-type: square;
+}
 /*--------------------------------------
 ---------- ABOUT AREA CSS END ----------
 ---------------------------------------*/
